Use thread pools for file uploads